# check24-scraper

./: .gitignore  package.json
check24-scraper/: .gitignore  README.md  docker-compose.yml  pyproject.toml
check24-scraper/check24scraper/: cli.py  scrape.py  utils.py
check24-scraper/notebooks/: 01_dataset.ipynb  02_lux.ipynb  03_compare.ipynb  04_x.ipynb
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  jobs.json
frontend/src/components/Elements/Button/: Button.tsx
frontend/src/components/Elements/Card/: Card.tsx
frontend/src/components/Form/: Autocomplete.tsx  Checkbox.tsx  Form.tsx  FormGroup.tsx  TextInput.tsx  index.ts
frontend/src/features/steps/components/: Step1.tsx  Step2.tsx  Step3.tsx
frontend/src/features/steps/types/: index.ts
frontend/src/hooks/: index.ts
